--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "form-data": "^4.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
